overflow corrected

--- a/ui/public/styles/components/detail.scss
+++ b/ui/public/styles/components/detail.scss
@@ -26,9 +26,9 @@
 }
 
 .c-detail-title {
-  font-size: 32px;
+  font-size: 28px;
   font-weight: 700;
-  line-height: 48px;
+  line-height: 36px;
   letter-spacing: 0em;
   color: $pinksoft750;
   margin-bottom: 11px;
